--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,40 +1,45 @@
-/* Layout
-================================ */
 
-body {
-	padding-top: 50px;
+.sidebar{
+	background: #f6f6f6;
+	width: 180px;
 }
-.container {
-	max-width: 1000px;
+#wikilogo{
+	width: 100%;
 }
-
-/* Jumbotron
-================================ */
-
-.jumbotron {
-  text-align: center;
-  padding-bottom: 50px;
+.wrap{
+	margin-top: 100px;
 }
-
-/* Glyphicons
-================================ */
-
-.glyphicon {
-	font-size: 3em;
-	display: block;
-	text-align: center;
-	color: rgba(58,135,173,1);
+.wikitop{
+	height: 90px;
+	background: white;
 }
-
-/* Carousel
-================================ */
-
-.carousel-indicators {
-	bottom: 0;
+.col1, .col2, .col3, .col4, .wikitop{
+	border: 1px solid #d4ccdf;
 }
-.carousel-indicators .active {
-	background-color: #222;
+h2{
+	border: 1px solid #d4ccdf;
 }
-.carousel-indicators li {
-	border-color: #222;
+.col1{
+	background: #f5fffa;
+}
+.col1 h2{
+	background: #cef2e0;
+}
+.col2{
+	background: #f5faff;
+}
+.col2 h2{
+	background-color: #cedff2;
+}
+.col3{
+	background: #faf5ff;
+}
+.col h2{
+	background: #f2cedd;
+}
+.col4{
+	background: yellow;
+}
+.col4 h2 {
+	background: #ddcef2;
 }
